--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "ag-grid-community": "^33.1.1",
+    "ag-grid-vue3": "^33.1.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "pinia": "^2.3.0",
