--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vuetify": "^3.7.6"
+    "vuetify": "^3.7.6",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
