--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vuepic/vue-datepicker": "^11.0.1",
     "ag-grid-community": "^33.1.1",
     "ag-grid-vue3": "^33.1.1",
     "axios": "^1.7.9",
