--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "ag-grid-vue3": "^33.1.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.13",
     "pinia": "^2.3.0",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
